convert amy and lews pig dice app to have task runners and code testers

--- a/index.html
+++ b/index.html
@@ -6,9 +6,75 @@
     <script src="build/js/vendor.min.js" charset="utf-8"></script>
     <script src="build/js/app.js" charset="utf-8"></script>
     <meta charset="utf-8" name="viewport" content="width=device-width">
-    <title>Hello!</title>
-  </head>
-  <body>
-    <h1>hello worl</h1>
-  </body>
-</html>
+    <title>Pig-Dice</title>
+    </head>
+    <body>
+      <div class="container">
+        <div class="winner-effect">
+          <img id="confetti" src="img/confetti.gif">
+        </div>
+        <div class="row">
+          <div class="col-md-12">
+            <div class="jumbotron">
+              <h1 class="display-1">Pig Dice</h1>
+              <p class="lead">Do you have the chops?!?!</p>
+                <div class="bubble">
+                  <span id="pun"><strong>Oink! Oink! Oink!</strong></span>
+                </div>
+              <img id="bub" src="img/bubble.gif">
+              <img id="pig" src="img/waddles.png">
+            </div>
+            <div class="jumbotron" id="jumbo">
+              <h2 id="result"></h2>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <span id="p1hide">
+              <div class="card text-center" style="width: 20rem;">
+                <div class="card-body">
+                  <h3>Enter Your Name:</h3><br>
+                  <input name ="p1name" type="text" id="p1name">
+                </div>
+              </div>
+            </span>
+          </div>
+          <div class="col-md-6">
+            <span id="p2hide">
+              <div class="card text-center" style="width: 20rem;">
+                <div class="card-body">
+                  <h3>Enter Your Name:</h3><br>
+                  <input name ="p2name" type="text" id="p2name">
+                </div>
+              </div>
+            </span>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6">
+            <div class="card" style="width: 20rem;">
+              <div class="card-body">
+                <h4 class="card-title" id="p1-title">Player 1</h4><hr>
+                Round Total: <span id="p1round"></span><br>
+                Game Total: <span id="p1total"></span><br>
+                <button type="button" id="p1-roll" name="button-roll-p1" class="btn">ROLL</button>
+                <button type="button" id="p1-hold" name="button-hold-p1" class="btn">HOLD</button>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="card" style="width: 20rem;">
+              <div class="card-body">
+                <h4 class="card-title" id="p2-title">Player 2</h4><hr>
+                Round Total: <span id="p2round"></span><br>
+                Game Total: <span id="p2total"></span><br>
+                <button type="button" id="p2-roll" name="button-hold-p2" class="btn">ROLL</button>
+                <button type="button" id="p2-hold" name="button-hold-p2" class="btn">HOLD</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </body>
+  </html>
